# SilverFox

./: .gitignore  Dockerfile  dataset_brats.py  deployment.sh  docker_paths_mount_and_output_test.py  install_apex.py  project_container.def  pyproject.toml  run_install_apex.sh  the_coolest_deployment.sh  train_brats.py
datasets/: dataset_alien.py  dataset_crosses.py  dataset_cubes.py
diffusion_model/: modules.py  trainer_brats.py  unet.py  unet_brats.py
exploration/: exploring_results.ipynb  exploring_the_training.ipynb
results_2D/: config.txt
samplying_scripts/: generate_samples.py  sample_256.ipynb
training_scripts/: train_alien_test_2D.py  train_alien_test_2D_256.py  train_alien_test_2D_512.py  train_alien_test_3D.py  train_alien_test_3D_128_128_128.py  train_cross.py
training_scripts/160_channels/1_head/: train_alien_test_2D_256_16,8.py  train_alien_test_2D_256_16.py  train_alien_test_2D_256_8.py
training_scripts/160_channels/2_head/: train_alien_test_2D_256_16,8.py  train_alien_test_2D_256_16.py  train_alien_test_2D_256_8.py
training_scripts/160_channels/3_head/: train_alien_test_2D_256_16,8.py  train_alien_test_2D_256_16.py  train_alien_test_2D_256_8.py
training_scripts/96_channels/1_head/: train_alien_test_2D_256_16,8.py  train_alien_test_2D_256_16.py  train_alien_test_2D_256_8.py
training_scripts/old_training_scripts/: deploy_the_christmas_scripts.sh  deploy_the_christmas_scripts_256.sh
training_scripts/old_training_scripts_512/: deploy_the_christmas_scripts_512.sh
training_scripts/post_christmas/: deploy_2D.sh
(+52 files in other folders)
